# EasyOwl

./: README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
src/: __init__.py
src/easyowl/: __init__.py  constants.py  dowload.py  download.py  enums.py  exceptions.py  hierarchy.py  parsing.py  reader.py  similarity.py
tests/: test_reader.py
tests/data/: bao_complete.owl
