[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easyowl"
version = "0.0.1"
description = "Easy and lightweight parsing of OWL Ontology files"
authors = [
    { name = "Matthew Corney", email = "matthew_corney@yahoo.co.uk" }
]
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "lxml"
]
requires-python = ">=3.7"