[build-system]
requires = ["setuptools>=42", "wheel", "pytest-runner"]
build-backend = "setuptools.build_meta"

[project]
name = "easyowl"
version = "0.0.1"
description = "Easy and lightweight parsing of OWL Ontology files"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Matthew Corney", email = "matthew_corney@yahoo.co.uk" }
]
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "lxml"
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dynamic = []  # Explicitly state there are no dynamic fields

[tool.setuptools]
packages = { find = { where = ["src"] } }
include-package-data = true

[tool.setuptools.package-data]
easyowl = ["*.txt", "*.md"]  # Adjust if specific non-Python files need inclusion

[tool.setuptools.extras]
dev = ["pytest", "pytest-runner"]
